<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="add_date_format">Added : %s&#160;</string>
    <string name="add_element">Add an element</string>
    <string name="add_participant">Add a participant</string>
    <string name="add_hint">to add</string>
    <string name="add_person">Add a person</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">Tap the amount</string>
    <string name="amount_with_points">Amount : &#160;</string>
    <string name="app_name">CombienJteDois</string>
    <string name="category_object">Category</string>
    <string name="category_object_with_points">Object category : &#160;</string>
    <string name="consignee_format">For : %s</string>
    <string name="content">Content</string>
    <string name="credence">Credence</string>
    <string name="day">&#160;day</string>
    <string name="debt">Debt</string>
    <string name="debt_already_present">Element always exists !</string>
    <string name="description_hint">Tap the description</string>
    <string name="value_hint">Tap the value</string>
    <string name="subject_hint">Tap the present</string>
    <string name="digits_edittext">abcdefghijklmnopqrstuvwxyz .ABCDEFGHIJKLMNOPQRSTUVWXYZ-</string>
    <string name="empty_field_format">\"%s\" field required !</string>
    <string name="euro">€</string>
    <string name="event_date_format">For  : %1$s ( Dans %2$s )</string>
    <string name="finish">Finish</string>
    <string name="event_date">Event date</string>
    <string name="impossible_date">You can\'t put a date before tomorrow !</string>
    <string name="hour">&#160;hour</string>
    <string name="increase">Increase</string>
    <string name="lifetime_format"> ( %s ago )</string>
    <string name="message_delete_element">Do you want to delete this element ?</string>
    <string name="message_delete_person_text">Do you want to delete this person ?</string>
    <string name="minut">&#160;minut</string>
    <string name="modification_date_format">Last modification : %s&#160;</string>
    <string name="modify_element">Edit an element</string>
    <string name="modify_person">Edit a person</string>
    <string name="money_format">%s €</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="name_with_points">Name : %s</string>
    <string name="name_hint">Tap the name</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="negative_amount">Amount doesn\'t be negative </string>
    <string name="loan">Loan</string>
    <string name="negative_text">No</string>
    <string name="object">Object</string>
    <string name="object_description">Description</string>
    <string name="object_description_with_points">Description :&#160;</string>
    <string name="object_hint">Tap the object</string>
    <string name="object_with_points">Object :&#160;</string>
    <string name="ok">OK</string>
    <string name="participant_number_format">Participants : %s</string>
    <string name="person_already_present_format">%s always exists !</string>
    <string name="person_hint">Tap the name</string>
    <string name="person_name">Person name</string>
    <string name="person_name_with_points">Person name :&#160;</string>
    <string name="phone_hint">Tap the number</string>
    <string name="phone_number_optional">Phone number (optional)</string>
    <string name="phone_number">Phone number</string>
    <string name="lending">Lending</string>
    <string name="positive_text">Yes</string>
    <string name="event_format">Event : %s</string>
    <string name="subject">Present</string>
    <string name="value_format">Value : %s</string>
    <string name="value">Value</string>
    <string name="reduce">Reduce</string>
    <string name="subtract_hint">to subtract</string>
    <string name="title_section1">Money</string>
    <string name="title_section2">Items on loan</string>
    <string name="title_section3">Events</string>
    <string name="title_section4">Donate</string>
    <string name="toast_add_element">Element added !</string>
    <string name="toast_add_person">Person added !</string>
    <string name="toast_add_event">Event added !</string>
    <string name="add_event">Add an event</string>
    <string name="modify_event">Edit an event</string>
    <string name="toast_delete_element">Element deleted !</string>
    <string name="toast_delete_person">Person deleted</string>
    <string name="toast_delete_event">Event deleted !</string>
    <string name="toast_modify">Changes done !</string>
    <string name="total">Total :&#160;</string>
    <string name="type">Type</string>
    <string name="type_with_points">Type :&#160;</string>
    <string name="validate">Validate</string>
    <string name="send">Send</string>
    <string name="warning_text">Warning !</string>
    <string name="participant_already_present">Participant always exists !</string>
    <string name="toast_add_participant">Participant added !</string>
    <string name="toast_delete_participant">Participant deleted !</string>
    <string name="waiting">Waiting for payment</string>
    <string name="update_payment">Update</string>
    <string name="send_message_title">Send a message</string>
    <string name="check">Check</string>
    <string name="budget_format">Budget : %s</string>
    <string name="some_instants">&#160;a short time</string>
    <string name="settings">Settings</string>

    <string name="preferences_confirm_dismiss">Confirm Dismiss</string>
    <string name="preferences_swipe_to_dismiss">Swipe to dismiss</string>
    <string name="preferences_swipe_description">Swipe to dismiss an element or a long click</string>
    <string name="preferences_money_alert">Debt notification</string>
    <string name="preferences_money_description">Notification to state debt (after device boot)</string>
    <string name="preferences_loan_alert">Loan object notification</string>
    <string name="preferences_loan_description">Notification to state loan object (after device boot)</string>

    <string name="donation_paypal">Donate with PayPal</string>
    <string name="donations_button_close">Close</string>
    <string name="donations_description">Do you find this application useful?\nSupport it\'s development by sending a donation to the developer!</string>
    <string name="donations_paypal_description">You will be redirected to the PayPal website, don\'t worry, it\'s secured ! :)</string>
    <string name="donation_alert_dialog_title">Error occurred</string>
    <string name="donation_alert_dialog_no_browser">No browser was found to open a website!</string>

    <string name="notification_money_text_format">Credence : %1$s € | Debt : %2$s €</string>
    <string name="notification_loan_text_format">Object(s) exchanged : %s</string>

    <string name="message_text_money_format">Hey, don\'t forget to give me %s€ ! :)</string>
    <string name="message_text_event_format">Hey, don\'t forget to give me %1$s€ for your participation on \"%2$s\" :)</string>

    <string name="impossible_send">Error to send message !</string>
    <string name="pending_send">Sending&#8230;</string>
    <string name="sending">Sending successfully !</string>
</resources>