<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/person_name_with_points"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/namePersonEditView"
                android:inputType="text"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:digits="@string/digits_edittext"
                android:background="@null"
                android:hint="@string/person_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include layout="@layout/horizontal_separator" />

            <TextView
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/category_object_with_points"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/categorySpinnerView"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include layout="@layout/horizontal_separator" />

            <TextView
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/type_with_points"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/negativeLoanView"
                    android:text="@string/loan"
                    android:gravity="center"
                    android:padding="15dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/switch_button"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/positiveLoanView"
                    android:text="@string/lending"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:padding="15dp"
                    android:background="@drawable/switch_button"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <include layout="@layout/horizontal_separator" />

            <TextView
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/object_description_with_points"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/objectDescriptionView"
                android:inputType="text"
                android:layout_margin="5dp"
                android:maxLength="40"
                android:padding="5dp"
                android:digits="@string/digits_edittext"
                android:background="@null"
                android:hint="@string/description_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include layout="@layout/horizontal_separator" />

            <TextView
                android:id="@+id/neutralTextView"
                android:textColor="@color/dark_blue"
                android:padding="15dp"
                android:gravity="center"
                android:background="@drawable/custom_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>