<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/typeDebtView"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/negativeDebtView"
            android:text="@string/debt"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:background="@drawable/switch_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/positiveDebtView"
            android:text="@string/credence"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:padding="15dp"
            android:background="@drawable/switch_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <include layout="@layout/horizontal_separator" />

    <TextView
        android:id="@+id/reasonTextView"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/reasonEditText"
        android:inputType="text"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="@null"
        android:digits="@string/digits_edittext"
        android:hint="@string/object_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/horizontal_separator" />


    <TextView
        android:id="@+id/countTextView"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/countEditText"
            android:inputType="numberSigned"
            android:hint="@string/amount_hint"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@null"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/deviseView"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/euro"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <include layout="@layout/horizontal_separator" />

    <TextView
        android:id="@+id/neutralTextView"
        android:textColor="@color/dark_blue"
        android:padding="15dp"
        android:gravity="center"
        android:background="@drawable/custom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>