<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/preferences_confirm_dismiss"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/confirmDismissCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <include layout="@layout/horizontal_separator" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/preferences_money_alert"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="10.5sp"
                android:layout_width="wrap_content"
                android:text="@string/preferences_money_description"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/moneyAlertCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <include layout="@layout/horizontal_separator" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/preferences_loan_alert"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="10.5sp"
                android:layout_width="wrap_content"
                android:text="@string/preferences_loan_description"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/loanAlertCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <include layout="@layout/horizontal_separator" />

</LinearLayout>